--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/client/",
     "build:prod": "npx browserslist@latest --update-db && yarn build",
     "eslint": "eslint src --ext .ts,.tsx"
   },
